finished up search styling with wraparound and fixed department-less seach

--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -9,7 +9,12 @@
     width: 50%;
     padding: 10px;
     align-items: center;
-    font-family: 'Open Sans',sans-serif
+    font-family: 'Open Sans',sans-serif;
+  }
+  h4 {
+    font-weight: bold;
+    font-family: 'Open Sans',sans-serif;
+    color: #333;
   }
 
   h3 {
@@ -253,5 +258,7 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+
+
 
 
